Update configuration, evaluation scripts, and results documentation
- Modify .gitignore to include new directories for checkpoints and evaluation results.
- Adjust config.yaml to refine preprocessing parameters and model dropout rates for improved regularization.
- Enhance README with detailed results summary, key findings, and reproduction instructions for the best-performing model.
- Introduce results_summary.md to provide a comprehensive overview of experimental outcomes and model comparisons.
- Add evaluate_all_experiments.py script for automated evaluation and results aggregation across all trained models.

--- a/.gitignore
+++ b/.gitignore
@@ -65,7 +65,6 @@ htmlcov/
 .coverage
 .coverage.*
 .cache
-.docs
 nosetests.xml
 coverage.xml
 *.cover
@@ -169,3 +168,28 @@ report/*.dvi
 *.swp
 *.swo
 *~
+nul
+
+# === Project-Specific Additions ===
+
+# Checkpoints (large model files)
+checkpoints/
+checkpoints_server/
+
+# Evaluation results (can be regenerated)
+evaluation_final/
+Evaluation/
+results_server/
+results/
+
+
+# Threshold tuning outputs
+threshold_tuning_*.json
+
+# Test/debug images
+augmentation_test.png
+threshold_curve.png
+
+# Any other large result directories
+experiments/results/
+
